# fconv

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: cli.yaml  main.rs  variant.rs
