[package]
name = "fconv"
version = "0.7.1"
edition = "2021"
description = "Data format converter"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap_complete = "4.5.24"
indexmap = "2.5.0"
plist = "1.7.0"
serde = "1.0.209"
serde-pickle = "1.1.1"
serde_json = "1.0.127"
serde_yaml_ng = "0.10.0"
toml = "0.8.19"

[dev-dependencies]
serde_test = "1.0.177"

[profile.release]
codegen-units = 1
lto = true
strip = true
