[package]
name = "fconv"
version = "0.8.0"
edition = "2024"
description = "Data format converter"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
indexmap = "2.13.0"
plist = "1.8.0"
serde = "1.0.228"
serde-pickle = "1.2.0"
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
toml = "1.0.3"

[dev-dependencies]
serde_test = "1.0.177"

[profile.release]
codegen-units = 1
lto = true
strip = true
